2003-03-06  Gregory Casamento <greg_casamento@yahoo.com>

	* GormFilesOwner.m: Corrected minor problem with updating
	class names for the file's owner inspector.   It was not updating
	the list when reselecting the same object, so new classes were not
	being displayed.
	
2003-03-05  Adam Fedor  <fedor@gnu.org>

	* Version: 0.2.6

2003-03-04  Fabien <fabien@tuxfamily.org>

	* Palettes/3Containers/inspectors.m: Update TabView inspector
	* Palettes/4Data/inspectors.m: Update comboBox inspector.

2003-03-04  Adam Fedor  <fedor@gnu.org>

	* Gorm.m ([Gorm -infoPanel:sender]): Update application name.

	* Palettes/0Menus/main.m ([MenusPalette -finishInstantiate]): Use
	orderFrontStandardInfoPanel for Info menu item.

2003-03-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Gorm.h:
	* Gorm.m:
	* GormBoxEditor.h:
	* GormBoxEditor.m:
	* GormButtonEditor.h:
	* GormButtonEditor.m:
	* GormClassEditor.m:
	* GormClassManager.h:
	* GormClassManager.m:
	* GormControlEditor.h:
	* GormControlEditor.m:
	* GormCustomClassInspector.h:
	* GormCustomView.h:
	* GormCustomView.m:
	* GormDocument.h:
	* GormDocument.m:
	* GormFilesOwner.h:
	* GormGenericEditor.m:
	* GormInspectorsManager.h:
	* GormInternalViewEditor.h:
	* GormInternalViewEditor.m:
	* GormMatrixEditor.h:
	* GormMatrixEditor.m:
	* GormOutlineView.h:
	* GormPalettesManager.h:
	* GormPlacementInfo.h:
	* GormPosingView.h:
	* GormPosingView.m:
	* GormPreferences.h:
	* GormPreferences.m:
	* GormPrivate.h:
	* GormScrollViewEditor.m:
	* GormSoundInspector.h:
	* GormSplitViewEditor.h:
	* GormSplitViewEditor.m:
	* GormTabViewEditor.h:
	* GormTabViewEditor.m:
	* GormViewEditor.h:
	* GormViewEditor.m:
	* GormViewWithContentViewEditor.h:
	* GormViewWithContentViewEditor.m:
	* GormViewWithSubviewsEditor.h:
	* GormViewWithSubviewsEditor.m:
	* GormWindowEditor.m:
	* Palettes/0Menus/GormNSMenu.h:
	* Palettes/0Menus/GormNSMenu.m:
	* Palettes/1Windows/GormNSPanel.h:
	* Palettes/1Windows/GormNSPanel.m:
	* Palettes/1Windows/GormNSWindow.h: